<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Days Master</string>
    <string name="my_notes">Notes</string>
    <string name="search_notes">Search notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type note here…</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_voice">Add Voice</string>
    <string name="add_image">Add Image</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="TXR">提醒日</string>
    <string name="DL">登录注册</string>
    <string name="LS">历史</string>
</resources>